--- a/app/src/main/res/layout/row_model.xml
+++ b/app/src/main/res/layout/row_model.xml
@@ -5,6 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="10dp"
+    app:cardCornerRadius="10dp"
+    android:background="#FFD2E1"
+    app:cardBackgroundColor="#FFD2E1"
     app:cardElevation="6dp">
 
     <LinearLayout
@@ -24,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="2dp"
             android:text="Item"
             android:textColor="@color/black"
             android:textSize="14sp" />
